--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,8 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+app.ts
+tsconfig.json
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
