--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Zavyar Tajdar",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "nodemon": "^3.1.10",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
